parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENT SEMICOLON outblock PERIOD
Rule 2     outblock -> var_decl_part subprog_decl_part outblock_act statement
Rule 3     outblock_act -> <empty>
Rule 4     var_decl_part -> var_decl_list SEMICOLON
Rule 5     var_decl_part -> <empty>
Rule 6     var_decl_list -> var_decl_list SEMICOLON var_decl
Rule 7     var_decl_list -> var_decl
Rule 8     var_decl -> VAR id_list
Rule 9     subprog_decl_part -> subprog_decl_list SEMICOLON
Rule 10    subprog_decl_part -> <empty>
Rule 11    subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl
Rule 12    subprog_decl_list -> subprog_decl
Rule 13    subprog_decl -> proc_decl
Rule 14    subprog_decl -> func_decl
Rule 15    proc_decl -> PROCEDURE proc_name LPAREN RPAREN SEMICOLON inblock
Rule 16    proc_decl -> PROCEDURE proc_name LPAREN proc_decl_act1 id_list RPAREN SEMICOLON inblock
Rule 17    proc_decl_act1 -> <empty>
Rule 18    proc_name -> IDENT
Rule 19    inblock -> inblock_act1 var_decl_part inblock_act2 statement
Rule 20    inblock_act1 -> <empty>
Rule 21    inblock_act2 -> <empty>
Rule 22    func_decl -> FUNCTION func_name LPAREN RPAREN SEMICOLON func_inblock
Rule 23    func_decl -> FUNCTION func_name LPAREN func_decl_act1 id_list RPAREN SEMICOLON func_inblock
Rule 24    func_decl_act1 -> <empty>
Rule 25    func_name -> IDENT
Rule 26    func_inblock -> func_inblock_act1 var_decl_part func_inblock_act2 statement
Rule 27    func_inblock_act1 -> <empty>
Rule 28    func_inblock_act2 -> <empty>
Rule 29    statement_list -> statement_list SEMICOLON statement
Rule 30    statement_list -> statement
Rule 31    statement -> assignment_statement
Rule 32    statement -> if_statement
Rule 33    statement -> while_statement
Rule 34    statement -> for_statement
Rule 35    statement -> proc_call_statement
Rule 36    statement -> null_statement
Rule 37    statement -> block_statement
Rule 38    statement -> read_statement
Rule 39    statement -> write_statement
Rule 40    statement -> func_call_statement
Rule 41    assignment_statement -> IDENT ASSIGN expression
Rule 42    assignment_statement -> IDENT LBRACKET expression RBRACKET ASSIGN expression
Rule 43    if_statement -> IF condition if_act1 THEN statement else_statement
Rule 44    if_act1 -> <empty>
Rule 45    else_statement -> ELSE else_act1 statement
Rule 46    else_statement -> <empty>
Rule 47    else_act1 -> <empty>
Rule 48    while_statement -> WHILE while_act1 condition while_act2 DO statement
Rule 49    while_act1 -> <empty>
Rule 50    while_act2 -> <empty>
Rule 51    for_statement -> FOR IDENT ASSIGN expression TO expression for_act1 DO statement
Rule 52    for_act1 -> <empty>
Rule 53    proc_call_statement -> proc_call_name LPAREN RPAREN
Rule 54    proc_call_statement -> proc_call_name LPAREN proc_call_statement_act1 arg_list RPAREN
Rule 55    proc_call_statement_act1 -> <empty>
Rule 56    func_call_statement -> func_call_name LPAREN RPAREN
Rule 57    func_call_statement -> func_call_name LPAREN func_call_statement_act1 arg_list RPAREN
Rule 58    func_call_statement_act1 -> <empty>
Rule 59    arg_list -> expression
Rule 60    arg_list -> arg_list COMMA expression
Rule 61    proc_call_name -> IDENT
Rule 62    func_call_name -> IDENT
Rule 63    block_statement -> BEGIN statement_list END
Rule 64    read_statement -> READ LPAREN IDENT RPAREN
Rule 65    read_statement -> READ LPAREN IDENT LBRACKET expression RBRACKET RPAREN
Rule 66    write_statement -> WRITE LPAREN expression RPAREN
Rule 67    null_statement -> <empty>
Rule 68    condition -> expression EQ expression
Rule 69    condition -> expression NEQ expression
Rule 70    condition -> expression LT expression
Rule 71    condition -> expression LE expression
Rule 72    condition -> expression GT expression
Rule 73    condition -> expression GE expression
Rule 74    expression -> term
Rule 75    expression -> MINUS term
Rule 76    expression -> expression PLUS term
Rule 77    expression -> expression MINUS term
Rule 78    expression -> func_call_statement
Rule 79    term -> factor
Rule 80    term -> term MULT factor
Rule 81    term -> term DIV factor
Rule 82    term -> func_call_statement
Rule 83    factor -> var_name
Rule 84    factor -> number
Rule 85    factor -> LPAREN expression RPAREN
Rule 86    factor -> func_call_statement
Rule 87    var_name -> IDENT
Rule 88    var_name -> IDENT LBRACKET expression RBRACKET
Rule 89    number -> NUMBER
Rule 90    id_list -> IDENT
Rule 91    id_list -> id_list COMMA IDENT
Rule 92    id_list -> id_list COMMA IDENT LBRACKET NUMBER INTERVAL NUMBER RBRACKET
Rule 93    id_list -> IDENT LBRACKET NUMBER INTERVAL NUMBER RBRACKET COMMA id_list id_list_act1
Rule 94    id_list_act1 -> <empty>

Terminals, with rules where they appear

ASSIGN               : 41 42 51
BEGIN                : 63
COMMA                : 60 91 92 93
DIV                  : 81
DO                   : 48 51
ELSE                 : 45
END                  : 63
EQ                   : 68
FOR                  : 51
FUNCTION             : 22 23
GE                   : 73
GT                   : 72
IDENT                : 1 18 25 41 42 51 61 62 64 65 87 88 90 91 92 93
IF                   : 43
INTERVAL             : 92 93
LBRACKET             : 42 65 88 92 93
LE                   : 71
LPAREN               : 15 16 22 23 53 54 56 57 64 65 66 85
LT                   : 70
MINUS                : 75 77
MULT                 : 80
NEQ                  : 69
NUMBER               : 89 92 92 93 93
PERIOD               : 1
PLUS                 : 76
PROCEDURE            : 15 16
PROGRAM              : 1
RBRACKET             : 42 65 88 92 93
READ                 : 64 65
RPAREN               : 15 16 22 23 53 54 56 57 64 65 66 85
SEMICOLON            : 1 4 6 9 11 15 16 22 23 29
THEN                 : 43
TO                   : 51
VAR                  : 8
WHILE                : 48
WRITE                : 66
error                : 

Nonterminals, with rules where they appear

arg_list             : 54 57 60
assignment_statement : 31
block_statement      : 37
condition            : 43 48
else_act1            : 45
else_statement       : 43
expression           : 41 42 42 51 51 59 60 65 66 68 68 69 69 70 70 71 71 72 72 73 73 76 77 85 88
factor               : 79 80 81
for_act1             : 51
for_statement        : 34
func_call_name       : 56 57
func_call_statement  : 40 78 82 86
func_call_statement_act1 : 57
func_decl            : 14
func_decl_act1       : 23
func_inblock         : 22 23
func_inblock_act1    : 26
func_inblock_act2    : 26
func_name            : 22 23
id_list              : 8 16 23 91 92 93
id_list_act1         : 93
if_act1              : 43
if_statement         : 32
inblock              : 15 16
inblock_act1         : 19
inblock_act2         : 19
null_statement       : 36
number               : 84
outblock             : 1
outblock_act         : 2
proc_call_name       : 53 54
proc_call_statement  : 35
proc_call_statement_act1 : 54
proc_decl            : 13
proc_decl_act1       : 16
proc_name            : 15 16
program              : 0
read_statement       : 38
statement            : 2 19 26 29 30 43 45 48 51
statement_list       : 29 63
subprog_decl         : 11 12
subprog_decl_list    : 9 11
subprog_decl_part    : 2
term                 : 74 75 76 77 80 81
var_decl             : 6 7
var_decl_list        : 4 6
var_decl_part        : 2 19 26
var_name             : 83
while_act1           : 48
while_act2           : 48
while_statement      : 33
write_statement      : 39

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENT SEMICOLON outblock PERIOD

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENT SEMICOLON outblock PERIOD

    IDENT           shift and go to state 3


state 3

    (1) program -> PROGRAM IDENT . SEMICOLON outblock PERIOD

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM IDENT SEMICOLON . outblock PERIOD
    (2) outblock -> . var_decl_part subprog_decl_part outblock_act statement
    (4) var_decl_part -> . var_decl_list SEMICOLON
    (5) var_decl_part -> .
    (6) var_decl_list -> . var_decl_list SEMICOLON var_decl
    (7) var_decl_list -> . var_decl
    (8) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 5 (var_decl_part -> .)
    FUNCTION        reduce using rule 5 (var_decl_part -> .)
    IDENT           reduce using rule 5 (var_decl_part -> .)
    IF              reduce using rule 5 (var_decl_part -> .)
    WHILE           reduce using rule 5 (var_decl_part -> .)
    FOR             reduce using rule 5 (var_decl_part -> .)
    BEGIN           reduce using rule 5 (var_decl_part -> .)
    READ            reduce using rule 5 (var_decl_part -> .)
    WRITE           reduce using rule 5 (var_decl_part -> .)
    PERIOD          reduce using rule 5 (var_decl_part -> .)
    VAR             shift and go to state 9

    outblock                       shift and go to state 5
    var_decl_part                  shift and go to state 6
    var_decl_list                  shift and go to state 7
    var_decl                       shift and go to state 8

state 5

    (1) program -> PROGRAM IDENT SEMICOLON outblock . PERIOD

    PERIOD          shift and go to state 10


state 6

    (2) outblock -> var_decl_part . subprog_decl_part outblock_act statement
    (9) subprog_decl_part -> . subprog_decl_list SEMICOLON
    (10) subprog_decl_part -> .
    (11) subprog_decl_list -> . subprog_decl_list SEMICOLON subprog_decl
    (12) subprog_decl_list -> . subprog_decl
    (13) subprog_decl -> . proc_decl
    (14) subprog_decl -> . func_decl
    (15) proc_decl -> . PROCEDURE proc_name LPAREN RPAREN SEMICOLON inblock
    (16) proc_decl -> . PROCEDURE proc_name LPAREN proc_decl_act1 id_list RPAREN SEMICOLON inblock
    (22) func_decl -> . FUNCTION func_name LPAREN RPAREN SEMICOLON func_inblock
    (23) func_decl -> . FUNCTION func_name LPAREN func_decl_act1 id_list RPAREN SEMICOLON func_inblock

    IDENT           reduce using rule 10 (subprog_decl_part -> .)
    IF              reduce using rule 10 (subprog_decl_part -> .)
    WHILE           reduce using rule 10 (subprog_decl_part -> .)
    FOR             reduce using rule 10 (subprog_decl_part -> .)
    BEGIN           reduce using rule 10 (subprog_decl_part -> .)
    READ            reduce using rule 10 (subprog_decl_part -> .)
    WRITE           reduce using rule 10 (subprog_decl_part -> .)
    PERIOD          reduce using rule 10 (subprog_decl_part -> .)
    PROCEDURE       shift and go to state 16
    FUNCTION        shift and go to state 17

    subprog_decl_part              shift and go to state 11
    subprog_decl_list              shift and go to state 12
    subprog_decl                   shift and go to state 13
    proc_decl                      shift and go to state 14
    func_decl                      shift and go to state 15

state 7

    (4) var_decl_part -> var_decl_list . SEMICOLON
    (6) var_decl_list -> var_decl_list . SEMICOLON var_decl

    SEMICOLON       shift and go to state 18


state 8

    (7) var_decl_list -> var_decl .

    SEMICOLON       reduce using rule 7 (var_decl_list -> var_decl .)


state 9

    (8) var_decl -> VAR . id_list
    (90) id_list -> . IDENT
    (91) id_list -> . id_list COMMA IDENT
    (92) id_list -> . id_list COMMA IDENT LBRACKET NUMBER INTERVAL NUMBER RBRACKET
    (93) id_list -> . IDENT LBRACKET NUMBER INTERVAL NUMBER RBRACKET COMMA id_list id_list_act1

    IDENT           shift and go to state 20

    id_list                        shift and go to state 19

state 10

    (1) program -> PROGRAM IDENT SEMICOLON outblock PERIOD .

    $end            reduce using rule 1 (program -> PROGRAM IDENT SEMICOLON outblock PERIOD .)


state 11

    (2) outblock -> var_decl_part subprog_decl_part . outblock_act statement
    (3) outblock_act -> .

    IDENT           reduce using rule 3 (outblock_act -> .)
    IF              reduce using rule 3 (outblock_act -> .)
    WHILE           reduce using rule 3 (outblock_act -> .)
    FOR             reduce using rule 3 (outblock_act -> .)
    BEGIN           reduce using rule 3 (outblock_act -> .)
    READ            reduce using rule 3 (outblock_act -> .)
    WRITE           reduce using rule 3 (outblock_act -> .)
    PERIOD          reduce using rule 3 (outblock_act -> .)

    outblock_act                   shift and go to state 21

state 12

    (9) subprog_decl_part -> subprog_decl_list . SEMICOLON
    (11) subprog_decl_list -> subprog_decl_list . SEMICOLON subprog_decl

    SEMICOLON       shift and go to state 22


state 13

    (12) subprog_decl_list -> subprog_decl .

    SEMICOLON       reduce using rule 12 (subprog_decl_list -> subprog_decl .)


state 14

    (13) subprog_decl -> proc_decl .

    SEMICOLON       reduce using rule 13 (subprog_decl -> proc_decl .)


state 15

    (14) subprog_decl -> func_decl .

    SEMICOLON       reduce using rule 14 (subprog_decl -> func_decl .)


state 16

    (15) proc_decl -> PROCEDURE . proc_name LPAREN RPAREN SEMICOLON inblock
    (16) proc_decl -> PROCEDURE . proc_name LPAREN proc_decl_act1 id_list RPAREN SEMICOLON inblock
    (18) proc_name -> . IDENT

    IDENT           shift and go to state 24

    proc_name                      shift and go to state 23

state 17

    (22) func_decl -> FUNCTION . func_name LPAREN RPAREN SEMICOLON func_inblock
    (23) func_decl -> FUNCTION . func_name LPAREN func_decl_act1 id_list RPAREN SEMICOLON func_inblock
    (25) func_name -> . IDENT

    IDENT           shift and go to state 26

    func_name                      shift and go to state 25

state 18

    (4) var_decl_part -> var_decl_list SEMICOLON .
    (6) var_decl_list -> var_decl_list SEMICOLON . var_decl
    (8) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    FUNCTION        reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    IDENT           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    IF              reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    WHILE           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    FOR             reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    BEGIN           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    READ            reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    WRITE           reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    PERIOD          reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    SEMICOLON       reduce using rule 4 (var_decl_part -> var_decl_list SEMICOLON .)
    VAR             shift and go to state 9

    var_decl                       shift and go to state 27

state 19

    (8) var_decl -> VAR id_list .
    (91) id_list -> id_list . COMMA IDENT
    (92) id_list -> id_list . COMMA IDENT LBRACKET NUMBER INTERVAL NUMBER RBRACKET

    SEMICOLON       reduce using rule 8 (var_decl -> VAR id_list .)
    COMMA           shift and go to state 28


state 20

    (90) id_list -> IDENT .
    (93) id_list -> IDENT . LBRACKET NUMBER INTERVAL NUMBER RBRACKET COMMA id_list id_list_act1

    COMMA           reduce using rule 90 (id_list -> IDENT .)
    SEMICOLON       reduce using rule 90 (id_list -> IDENT .)
    RPAREN          reduce using rule 90 (id_list -> IDENT .)
    LBRACKET        shift and go to state 29


state 21

    (2) outblock -> var_decl_part subprog_decl_part outblock_act . statement
    (31) statement -> . assignment_statement
    (32) statement -> . if_statement
    (33) statement -> . while_statement
    (34) statement -> . for_statement
    (35) statement -> . proc_call_statement
    (36) statement -> . null_statement
    (37) statement -> . block_statement
    (38) statement -> . read_statement
    (39) statement -> . write_statement
    (40) statement -> . func_call_statement
    (41) assignment_statement -> . IDENT ASSIGN expression
    (42) assignment_statement -> . IDENT LBRACKET expression RBRACKET ASSIGN expression
    (43) if_statement -> . IF condition if_act1 THEN statement else_statement
    (48) while_statement -> . WHILE while_act1 condition while_act2 DO statement
    (51) for_statement -> . FOR IDENT ASSIGN expression TO expression for_act1 DO statement
    (53) proc_call_statement -> . proc_call_name LPAREN RPAREN
    (54) proc_call_statement -> . proc_call_name LPAREN proc_call_statement_act1 arg_list RPAREN
    (67) null_statement -> .
    (63) block_statement -> . BEGIN statement_list END
    (64) read_statement -> . READ LPAREN IDENT RPAREN
    (65) read_statement -> . READ LPAREN IDENT LBRACKET expression RBRACKET RPAREN
    (66) write_statement -> . WRITE LPAREN expression RPAREN
    (56) func_call_statement -> . func_call_name LPAREN RPAREN
    (57) func_call_statement -> . func_call_name LPAREN func_call_statement_act1 arg_list RPAREN
    (61) proc_call_name -> . IDENT
    (62) func_call_name -> . IDENT

    IDENT           shift and go to state 41
    IF              shift and go to state 42
    WHILE           shift and go to state 43
    FOR             shift and go to state 44
    PERIOD          reduce using rule 67 (null_statement -> .)
    BEGIN           shift and go to state 46
    READ            shift and go to state 47
    WRITE           shift and go to state 48

    statement                      shift and go to state 30
    assignment_statement           shift and go to state 31
    if_statement                   shift and go to state 32
    while_statement                shift and go to state 33
    for_statement                  shift and go to state 34
    proc_call_statement            shift and go to state 35
    null_statement                 shift and go to state 36
    block_statement                shift and go to state 37
    read_statement                 shift and go to state 38
    write_statement                shift and go to state 39
    func_call_statement            shift and go to state 40
    proc_call_name                 shift and go to state 45
    func_call_name                 shift and go to state 49

state 22

    (9) subprog_decl_part -> subprog_decl_list SEMICOLON .
    (11) subprog_decl_list -> subprog_decl_list SEMICOLON . subprog_decl
    (13) subprog_decl -> . proc_decl
    (14) subprog_decl -> . func_decl
    (15) proc_decl -> . PROCEDURE proc_name LPAREN RPAREN SEMICOLON inblock
    (16) proc_decl -> . PROCEDURE proc_name LPAREN proc_decl_act1 id_list RPAREN SEMICOLON inblock
    (22) func_decl -> . FUNCTION func_name LPAREN RPAREN SEMICOLON func_inblock
    (23) func_decl -> . FUNCTION func_name LPAREN func_decl_act1 id_list RPAREN SEMICOLON func_inblock

    IDENT           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    IF              reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WHILE           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    FOR             reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    BEGIN           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    READ            reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WRITE           reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PERIOD          reduce using rule 9 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PROCEDURE       shift and go to state 16
    FUNCTION        shift and go to state 17

    subprog_decl                   shift and go to state 50
    proc_decl                      shift and go to state 14
    func_decl                      shift and go to state 15

state 23

    (15) proc_decl -> PROCEDURE proc_name . LPAREN RPAREN SEMICOLON inblock
    (16) proc_decl -> PROCEDURE proc_name . LPAREN proc_decl_act1 id_list RPAREN SEMICOLON inblock

    LPAREN          shift and go to state 51


state 24

    (18) proc_name -> IDENT .

    LPAREN          reduce using rule 18 (proc_name -> IDENT .)


state 25

    (22) func_decl -> FUNCTION func_name . LPAREN RPAREN SEMICOLON func_inblock
    (23) func_decl -> FUNCTION func_name . LPAREN func_decl_act1 id_list RPAREN SEMICOLON func_inblock

    LPAREN          shift and go to state 52


state 26

    (25) func_name -> IDENT .

    LPAREN          reduce using rule 25 (func_name -> IDENT .)


state 27

    (6) var_decl_list -> var_decl_list SEMICOLON var_decl .

    SEMICOLON       reduce using rule 6 (var_decl_list -> var_decl_list SEMICOLON var_decl .)


state 28

    (91) id_list -> id_list COMMA . IDENT
    (92) id_list -> id_list COMMA . IDENT LBRACKET NUMBER INTERVAL NUMBER RBRACKET

    IDENT           shift and go to state 53


state 29

    (93) id_list -> IDENT LBRACKET . NUMBER INTERVAL NUMBER RBRACKET COMMA id_list id_list_act1

    NUMBER          shift and go to state 54


state 30

    (2) outblock -> var_decl_part subprog_decl_part outblock_act statement .

    PERIOD          reduce using rule 2 (outblock -> var_decl_part subprog_decl_part outblock_act statement .)


state 31

    (31) statement -> assignment_statement .

    PERIOD          reduce using rule 31 (statement -> assignment_statement .)
    END             reduce using rule 31 (statement -> assignment_statement .)
    SEMICOLON       reduce using rule 31 (statement -> assignment_statement .)
    ELSE            reduce using rule 31 (statement -> assignment_statement .)


state 32

    (32) statement -> if_statement .

    PERIOD          reduce using rule 32 (statement -> if_statement .)
    END             reduce using rule 32 (statement -> if_statement .)
    SEMICOLON       reduce using rule 32 (statement -> if_statement .)
    ELSE            reduce using rule 32 (statement -> if_statement .)


state 33

    (33) statement -> while_statement .

    PERIOD          reduce using rule 33 (statement -> while_statement .)
    END             reduce using rule 33 (statement -> while_statement .)
    SEMICOLON       reduce using rule 33 (statement -> while_statement .)
    ELSE            reduce using rule 33 (statement -> while_statement .)


state 34

    (34) statement -> for_statement .

    PERIOD          reduce using rule 34 (statement -> for_statement .)
    END             reduce using rule 34 (statement -> for_statement .)
    SEMICOLON       reduce using rule 34 (statement -> for_statement .)
    ELSE            reduce using rule 34 (statement -> for_statement .)


state 35

    (35) statement -> proc_call_statement .

    PERIOD          reduce using rule 35 (statement -> proc_call_statement .)
    END             reduce using rule 35 (statement -> proc_call_statement .)
    SEMICOLON       reduce using rule 35 (statement -> proc_call_statement .)
    ELSE            reduce using rule 35 (statement -> proc_call_statement .)


state 36

    (36) statement -> null_statement .

    PERIOD          reduce using rule 36 (statement -> null_statement .)
    END             reduce using rule 36 (statement -> null_statement .)
    SEMICOLON       reduce using rule 36 (statement -> null_statement .)
    ELSE            reduce using rule 36 (statement -> null_statement .)


state 37

    (37) statement -> block_statement .

    PERIOD          reduce using rule 37 (statement -> block_statement .)
    END             reduce using rule 37 (statement -> block_statement .)
    SEMICOLON       reduce using rule 37 (statement -> block_statement .)
    ELSE            reduce using rule 37 (statement -> block_statement .)


state 38

    (38) statement -> read_statement .

    PERIOD          reduce using rule 38 (statement -> read_statement .)
    END             reduce using rule 38 (statement -> read_statement .)
    SEMICOLON       reduce using rule 38 (statement -> read_statement .)
    ELSE            reduce using rule 38 (statement -> read_statement .)


state 39

    (39) statement -> write_statement .

    PERIOD          reduce using rule 39 (statement -> write_statement .)
    END             reduce using rule 39 (statement -> write_statement .)
    SEMICOLON       reduce using rule 39 (statement -> write_statement .)
    ELSE            reduce using rule 39 (statement -> write_statement .)


state 40

    (40) statement -> func_call_statement .

    PERIOD          reduce using rule 40 (statement -> func_call_statement .)
    END             reduce using rule 40 (statement -> func_call_statement .)
    SEMICOLON       reduce using rule 40 (statement -> func_call_statement .)
    ELSE            reduce using rule 40 (statement -> func_call_statement .)


state 41

    (41) assignment_statement -> IDENT . ASSIGN expression
    (42) assignment_statement -> IDENT . LBRACKET expression RBRACKET ASSIGN expression
    (61) proc_call_name -> IDENT .
    (62) func_call_name -> IDENT .

  ! reduce/reduce conflict for LPAREN resolved using rule 61 (proc_call_name -> IDENT .)
    ASSIGN          shift and go to state 55
    LBRACKET        shift and go to state 56
    LPAREN          reduce using rule 61 (proc_call_name -> IDENT .)

  ! LPAREN          [ reduce using rule 62 (func_call_name -> IDENT .) ]


state 42

    (43) if_statement -> IF . condition if_act1 THEN statement else_statement
    (68) condition -> . expression EQ expression
    (69) condition -> . expression NEQ expression
    (70) condition -> . expression LT expression
    (71) condition -> . expression LE expression
    (72) condition -> . expression GT expression
    (73) condition -> . expression GE expression
    (74) expression -> . term
    (75) expression -> . MINUS term
    (76) expression -> . expression PLUS term
    (77) expression -> . expression MINUS term
    (78) expression -> . func_call_statement
    (79) term -> . factor
    (80) term -> . term MULT factor
    (81) term -> . term DIV factor
    (82) term -> . func_call_statement
    (56) func_call_statement -> . func_call_name LPAREN RPAREN
    (57) func_call_statement -> . func_call_name LPAREN func_call_statement_act1 arg_list RPAREN
    (83) factor -> . var_name
    (84) factor -> . number
    (85) factor -> . LPAREN expression RPAREN
    (86) factor -> . func_call_statement
    (62) func_call_name -> . IDENT
    (87) var_name -> . IDENT
    (88) var_name -> . IDENT LBRACKET expression RBRACKET
    (89) number -> . NUMBER

    MINUS           shift and go to state 60
    LPAREN          shift and go to state 63
    IDENT           shift and go to state 66
    NUMBER          shift and go to state 67

    condition                      shift and go to state 57
    expression                     shift and go to state 58
    term                           shift and go to state 59
    func_call_statement            shift and go to state 61
    factor                         shift and go to state 62
    func_call_name                 shift and go to state 49
    var_name                       shift and go to state 64
    number                         shift and go to state 65

state 43

    (48) while_statement -> WHILE . while_act1 condition while_act2 DO statement
    (49) while_act1 -> .

    MINUS           reduce using rule 49 (while_act1 -> .)
    LPAREN          reduce using rule 49 (while_act1 -> .)
    IDENT           reduce using rule 49 (while_act1 -> .)
    NUMBER          reduce using rule 49 (while_act1 -> .)

    while_act1                     shift and go to state 68

state 44

    (51) for_statement -> FOR . IDENT ASSIGN expression TO expression for_act1 DO statement

    IDENT           shift and go to state 69


state 45

    (53) proc_call_statement -> proc_call_name . LPAREN RPAREN
    (54) proc_call_statement -> proc_call_name . LPAREN proc_call_statement_act1 arg_list RPAREN

    LPAREN          shift and go to state 70


state 46

    (63) block_statement -> BEGIN . statement_list END
    (29) statement_list -> . statement_list SEMICOLON statement
    (30) statement_list -> . statement
    (31) statement -> . assignment_statement
    (32) statement -> . if_statement
    (33) statement -> . while_statement
    (34) statement -> . for_statement
    (35) statement -> . proc_call_statement
    (36) statement -> . null_statement
    (37) statement -> . block_statement
    (38) statement -> . read_statement
    (39) statement -> . write_statement
    (40) statement -> . func_call_statement
    (41) assignment_statement -> . IDENT ASSIGN expression
    (42) assignment_statement -> . IDENT LBRACKET expression RBRACKET ASSIGN expression
    (43) if_statement -> . IF condition if_act1 THEN statement else_statement
    (48) while_statement -> . WHILE while_act1 condition while_act2 DO statement
    (51) for_statement -> . FOR IDENT ASSIGN expression TO expression for_act1 DO statement
    (53) proc_call_statement -> . proc_call_name LPAREN RPAREN
    (54) proc_call_statement -> . proc_call_name LPAREN proc_call_statement_act1 arg_list RPAREN
    (67) null_statement -> .
    (63) block_statement -> . BEGIN statement_list END
    (64) read_statement -> . READ LPAREN IDENT RPAREN
    (65) read_statement -> . READ LPAREN IDENT LBRACKET expression RBRACKET RPAREN
    (66) write_statement -> . WRITE LPAREN expression RPAREN
    (56) func_call_statement -> . func_call_name LPAREN RPAREN
    (57) func_call_statement -> . func_call_name LPAREN func_call_statement_act1 arg_list RPAREN
    (61) proc_call_name -> . IDENT
    (62) func_call_name -> . IDENT

    IDENT           shift and go to state 41
    IF              shift and go to state 42
    WHILE           shift and go to state 43
    FOR             shift and go to state 44
    END             reduce using rule 67 (null_statement -> .)
    SEMICOLON       reduce using rule 67 (null_statement -> .)
    BEGIN           shift and go to state 46
    READ            shift and go to state 47
    WRITE           shift and go to state 48

    statement_list                 shift and go to state 71
    statement                      shift and go to state 72
    assignment_statement           shift and go to state 31
    if_statement                   shift and go to state 32
    while_statement                shift and go to state 33
    for_statement                  shift and go to state 34
    proc_call_statement            shift and go to state 35
    null_statement                 shift and go to state 36
    block_statement                shift and go to state 37
    read_statement                 shift and go to state 38
    write_statement                shift and go to state 39
    func_call_statement            shift and go to state 40
    proc_call_name                 shift and go to state 45
    func_call_name                 shift and go to state 49

state 47

    (64) read_statement -> READ . LPAREN IDENT RPAREN
    (65) read_statement -> READ . LPAREN IDENT LBRACKET expression RBRACKET RPAREN

    LPAREN          shift and go to state 73


state 48

    (66) write_statement -> WRITE . LPAREN expression RPAREN

    LPAREN          shift and go to state 74


state 49

    (56) func_call_statement -> func_call_name . LPAREN RPAREN
    (57) func_call_statement -> func_call_name . LPAREN func_call_statement_act1 arg_list RPAREN

    LPAREN          shift and go to state 75


state 50

    (11) subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl .

    SEMICOLON       reduce using rule 11 (subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl .)


state 51

    (15) proc_decl -> PROCEDURE proc_name LPAREN . RPAREN SEMICOLON inblock
    (16) proc_decl -> PROCEDURE proc_name LPAREN . proc_decl_act1 id_list RPAREN SEMICOLON inblock
    (17) proc_decl_act1 -> .

    RPAREN          shift and go to state 76
    IDENT           reduce using rule 17 (proc_decl_act1 -> .)

    proc_decl_act1                 shift and go to state 77

state 52

    (22) func_decl -> FUNCTION func_name LPAREN . RPAREN SEMICOLON func_inblock
    (23) func_decl -> FUNCTION func_name LPAREN . func_decl_act1 id_list RPAREN SEMICOLON func_inblock
    (24) func_decl_act1 -> .

    RPAREN          shift and go to state 78
    IDENT           reduce using rule 24 (func_decl_act1 -> .)

    func_decl_act1                 shift and go to state 79

state 53

    (91) id_list -> id_list COMMA IDENT .
    (92) id_list -> id_list COMMA IDENT . LBRACKET NUMBER INTERVAL NUMBER RBRACKET

    COMMA           reduce using rule 91 (id_list -> id_list COMMA IDENT .)
    SEMICOLON       reduce using rule 91 (id_list -> id_list COMMA IDENT .)
    RPAREN          reduce using rule 91 (id_list -> id_list COMMA IDENT .)
    LBRACKET        shift and go to state 80


state 54

    (93) id_list -> IDENT LBRACKET NUMBER . INTERVAL NUMBER RBRACKET COMMA id_list id_list_act1

    INTERVAL        shift and go to state 81


state 55

    (41) assignment_statement -> IDENT ASSIGN . expression
    (74) expression -> . term
    (75) expression -> . MINUS term
    (76) expression -> . expression PLUS term
    (77) expression -> . expression MINUS term
    (78) expression -> . func_call_statement
    (79) term -> . factor
    (80) term -> . term MULT factor
    (81) term -> . term DIV factor
    (82) term -> . func_call_statement
    (56) func_call_statement -> . func_call_name LPAREN RPAREN
    (57) func_call_statement -> . func_call_name LPAREN func_call_statement_act1 arg_list RPAREN
    (83) factor -> . var_name
    (84) factor -> . number
    (85) factor -> . LPAREN expression RPAREN
    (86) factor -> . func_call_statement
    (62) func_call_name -> . IDENT
    (87) var_name -> . IDENT
    (88) var_name -> . IDENT LBRACKET expression RBRACKET
    (89) number -> . NUMBER

    MINUS           shift and go to state 60
    LPAREN          shift and go to state 63
    IDENT           shift and go to state 66
    NUMBER          shift and go to state 67

    expression                     shift and go to state 82
    term                           shift and go to state 59
    func_call_statement            shift and go to state 61
    factor                         shift and go to state 62
    func_call_name                 shift and go to state 49
    var_name                       shift and go to state 64
    number                         shift and go to state 65

state 56
